--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     env_file:
       - ./.env
     environment:
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_USER=postgres
-      - POSTGRES_DB=todo_db
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+      - POSTGRES_USER=${DATABASE_USER}
+      - POSTGRES_DB=${DATABASE_NAME}
     ports:
       - "5432:5432"
     restart: always
@@ -29,12 +29,6 @@ services:
       - db_todoapp
     env_file:
       - ./.env
-    environment:
-      - DEBUG=1
-      - DATABASE_HOST=db_todoapp
-      - DATABASE_NAME=todo_db
-      - DATABASE_USER=postgres
-      - DATABASE_PASSWORD=password
 
 volumes:
   postgres_data:
