--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -30,5 +30,15 @@ services:
     env_file:
       - ./.env
 
+  frontend_todoapp:
+    build:
+      context: ..
+      dockerfile: Docker/frontend/Dockerfile
+    ports:
+      - "80:80"
+    depends_on:
+      - web_todoapp
+    restart: always
+
 volumes:
   postgres_data:
