Refactor: Remove existing task management code and templates
- Deleted task_list.html, task_detail.html, task_form.html, task_confirm_delete.html templates.
- Removed tests.py, urls.py, views.py, and serializers.py related to task management.
- Eliminated ASGI, WSGI, and settings files for the todo project.
- Cleaned up Docker configurations and added environment variables for database connection.
- Created new task model, serializers, and views for a fresh implementation.
- Added base template and navigation for task management UI.
- Implemented task creation, update, delete, and completion functionalities.u

--- a/Docker/backend-MS1/Dockerfile
+++ b/Docker/backend-MS1/Dockerfile
@@ -8,14 +8,14 @@ ENV PYTHONUNBUFFERED=1
 WORKDIR /app
 
 # Instalar dependencias
-COPY requirements.txt /app/
+COPY Backend-MS1/requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copiar el proyecto
-COPY . /app/
+COPY Backend-MS1 /app/Backend-MS1/
 
 # Puerto que expone el contenedor
 EXPOSE 8000
 
 # Comando para ejecutar el servidor de desarrollo
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "todo.wsgi:application", "--chdir", "todo"]
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "todo.wsgi:application", "--chdir", "Backend-MS1/todo"]
