--- a/Docker/frontend/nginx.conf
+++ b/Docker/frontend/nginx.conf
@@ -10,7 +10,7 @@ server {
 
     # Configuración para el API
     location /api/ {
-        proxy_pass http://web_todoapp:8000/api/;
+        proxy_pass http://backend_ms1_tasks:8000/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
