--- a/Docker/frontend/nginx.conf
+++ b/Docker/frontend/nginx.conf
@@ -8,7 +8,16 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Configuración para el API
+    # Authentication API - Route to MS2
+    location /api/auth/ {
+        proxy_pass http://backend_ms2_users:8001/api/auth/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Tasks API - Route to MS1
     location /api/ {
         proxy_pass http://backend_ms1_tasks:8000/api/;
         proxy_set_header Host $host;
