--- a/Docker/frontend/nginx.conf
+++ b/Docker/frontend/nginx.conf
@@ -17,6 +17,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Notification API - Route to MS3
+    location /api/notifications/ {
+        proxy_pass http://backend_ms3_notifications:8002/api/notifications/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Tasks API - Route to MS1
     location /api/ {
         proxy_pass http://backend_ms1_tasks:8000/api/;
