--- a/Docker/frontend/Dockerfile
+++ b/Docker/frontend/Dockerfile
@@ -13,7 +13,7 @@ RUN npm ci
 COPY Frontend/TodoFrontend/ ./
 
 # Compilar la aplicación
-RUN npm run build
+RUN npm run build       
 
 FROM nginx:alpine
 
@@ -25,4 +25,4 @@ COPY --from=build /app/dist /usr/share/nginx/html
 
 EXPOSE 80
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD sh -c "sleep 15 && nginx -g 'daemon off;'"
