--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     command: >
       sh -c "cd Backend-MS1/todo &&
              python manage.py migrate &&
+             python manage.py check &&
              gunicorn todo.wsgi:application --bind 0.0.0.0:8000"
     volumes:
       - ..:/app
@@ -30,6 +31,12 @@ services:
       - db_ms1
     env_file:
       - ./.env
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/api/health/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   frontend_todoapp:
     build:
