--- a/Docker/docker-stack.yml
+++ b/Docker/docker-stack.yml
@@ -41,11 +41,12 @@ services:
       - DATABASE_PASSWORD=password
       - DATABASE_HOST=db_ms1
       - DATABASE_PORT=5432
-      - ALLOWED_HOSTS=localhost 127.0.0.1 0.0.0.0 192.168.99.150
+      - ALLOWED_HOSTS=localhost 127.0.0.1 0.0.0.0 192.168.99.153
       - MS2_SECRET_KEY=iRz6KyZZr2bjEsv9hcSW6ePpaZj-8LO9-cmYBFhAdQk
     command: >
-          sh -c "sleep 20 &&
+          sh -c "sleep 30 &&
              cd Backend-MS1/todo &&
+             python manage.py migrate --noinput &&
              gunicorn todo.wsgi:application --bind 0.0.0.0:8000"
     ports:
       - "8000:8000"
